// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docker > should match everything 1`] = `
[
  "airbyte",
  "apache_airflow",
  "apache_spark",
  "aws",
  "aws.dynamodb",
  "aws.lambda",
  "aws.s3",
  "caddy",
  "cassandra",
  "clickhouse",
  "couchbase",
  "cypressci",
  "deno",
  "docker",
  "elasticsearch",
  "grafana",
  "hashicorp_vault",
  "httpd",
  "influxdb",
  "jenkins",
  "kibana",
  "mariadb",
  "memcached",
  "mongodb",
  "mysql",
  "neo4j",
  "nginx",
  "nodejs",
  "percona",
  "plausible",
  "postgresql",
  "rabbitmq",
  "redis",
  "ruby",
  "strapi",
  "zookeeper",
]
`;

exports[`docker > should match everything 2`] = `
[
  [
    "docker",
    "adobe/s3mock",
    "0.0.0",
  ],
  [
    "docker",
    "airbyte/worker",
    "latest",
  ],
  [
    "docker",
    "amazon/aws-cli",
    "0.0.0",
  ],
  [
    "docker",
    "amazon/aws-lambda-python",
    "latest",
  ],
  [
    "docker",
    "amazon/dynamodb-local",
    "0.0.0",
  ],
  [
    "docker",
    "apache/airflow",
    "0.0.0",
  ],
  [
    "docker",
    "apache/spark",
    "0.0.0",
  ],
  [
    "docker",
    "caddy",
    "0.0.0",
  ],
  [
    "docker",
    "cassandra",
    "0.0.0",
  ],
  [
    "docker",
    "clickhouse/clickhouse-server",
    "0.0.0",
  ],
  [
    "docker",
    "couchbase",
    "0.0.0",
  ],
  [
    "docker",
    "cypress",
    "0.0.0",
  ],
  [
    "docker",
    "denoland/deno",
    "0.0.0",
  ],
  [
    "docker",
    "elasticsearch",
    "0.0.0",
  ],
  [
    "docker",
    "grafana/grafana-enterprise",
    "0.0.0",
  ],
  [
    "docker",
    "httpd",
    "0.0.0",
  ],
  [
    "docker",
    "influxdb",
    "0.0.0",
  ],
  [
    "docker",
    "jenkins-docker",
    "0.0.0",
  ],
  [
    "docker",
    "kibana",
    "0.0.0",
  ],
  [
    "docker",
    "mariadb",
    "0.0.0",
  ],
  [
    "docker",
    "memcached",
    "0.0.0",
  ],
  [
    "docker",
    "mongo",
    "0.0.0",
  ],
  [
    "docker",
    "mysql",
    "0.0.0",
  ],
  [
    "docker",
    "neo4j",
    "0.0.0",
  ],
  [
    "docker",
    "nginx",
    "0.0.0",
  ],
  [
    "docker",
    "nodejs",
    "0.0.0",
  ],
  [
    "docker",
    "percona",
    "0.0.0",
  ],
  [
    "docker",
    "plausible/analytics",
    "0.0.0",
  ],
  [
    "docker",
    "postgres",
    "0.0.0",
  ],
  [
    "docker",
    "rabbitmq",
    "0.0.0",
  ],
  [
    "docker",
    "redis",
    "0.0.0",
  ],
  [
    "docker",
    "ruby",
    "0.0.0",
  ],
  [
    "docker",
    "strapi",
    "0.0.0",
  ],
  [
    "docker",
    "vault",
    "0.0.0",
  ],
  [
    "docker",
    "zookeeper",
    "0.0.0",
  ],
]
`;
